Node Editor: Image and Principled have missing Enums in properties inspector #115727

Closed
opened 2023-12-03 13:55:30 +01:00 by Paweł Piotrowski · 14 comments

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-02 19:08, hash: 8933284518a2

Short description of error
„Image Texture‟ and „Principled BSDF‟ nodes have missing Node Option enums in properties inspector while every other node have every option exposed (i've checked).
blender_l4cyMDVOcV

Missing options:

  • Image Editor

node_tree.nodes["Image Texture"].interpolation
node_tree.nodes["Image Texture"].projection
node_tree.nodes["Image Texture"].extension

blender_KcEaKCOXhG

  • Principled BSDF

node_tree.nodes["Principled BSDF"].subsurface_method
node_tree.nodes["Principled BSDF"].distribution

blender_grByUJF7cY


Eg of other nodes with enum options:
blender_CKKjA0jOYh
blender_Ckf4fhE80g
blender_Q9hMZ3CBrc

While this does not cause any error, it prevents working with nodes at zoomed out level or node options turned off.
eg. blender_4SSmAtGGG3

**Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-02 19:08, hash: `8933284518a2` **Short description of error** „Image Texture‟ and „Principled BSDF‟ nodes have missing _Node Option_ enums in properties inspector while every other node have every option exposed (i've checked). ![blender_l4cyMDVOcV](/attachments/14d9937a-f038-40e2-88f9-c3877a799165) **Missing options:** - Image Editor > node_tree.nodes["Image Texture"].interpolation > node_tree.nodes["Image Texture"].projection > node_tree.nodes["Image Texture"].extension ![blender_KcEaKCOXhG](/attachments/456371ff-832c-47bf-a1cb-efbb9d4aee9c) - Principled BSDF > node_tree.nodes["Principled BSDF"].subsurface_method > node_tree.nodes["Principled BSDF"].distribution ![blender_grByUJF7cY](/attachments/435e58cc-9639-4f9a-ab1d-9bc65fead8a7) ---- Eg of other nodes with enum options: ![blender_CKKjA0jOYh](/attachments/26e2eb00-179b-4387-9b8b-9d84cdf7985a) ![blender_Ckf4fhE80g](/attachments/aa2c417f-22ca-4cb7-8595-da53ba0e59aa) ![blender_Q9hMZ3CBrc](/attachments/998383ab-445e-40a2-a82b-e25e9844b4a9) While this does not cause any error, it prevents working with nodes at zoomed out level or node options turned off. eg. ![blender_4SSmAtGGG3](/attachments/65523681-2b55-414d-a4c3-582e3b2d0baa)
Paweł Piotrowski added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-03 13:55:30 +01:00
Member

The Principled BSDF case appears to be a recent regression because the enum properties are present in 3.6.5 (looks like they were drawn by the byp_func ShaderNodeBsdfPrincipled.draw_buttons_ext()):
image

The Image Texture case appears to have never displayed its extra enum properties; I checked 2.80, 2.93, 3.2 and 3.6.

The `Principled BSDF` case appears to be a recent regression because the enum properties are present in 3.6.5 (looks like they were drawn by the `byp_func` `ShaderNodeBsdfPrincipled.draw_buttons_ext()`): ![image](/attachments/e2b51855-024a-4cef-b427-75bb0eacbd8a) The `Image Texture` case appears to have never displayed its extra enum properties; I checked 2.80, 2.93, 3.2 and 3.6.
Contributor

I also have this issue

I also have this issue
Member

I can confirm as well. The Principled BSDF case was affected between 264c3e7bd7a6 - 407e2b9f700f (possibly 13fac109d3 caused this)

(subsurface radius is intentionally expanded in ea3814c3ed)

I can confirm as well. The Principled BSDF case was affected between `264c3e7bd7a6 - 407e2b9f700f` (possibly 13fac109d34c84b27e4a00c937ea6a1e751ad624 caused this) (subsurface radius is intentionally expanded in ea3814c3ed29190c029c5804d62a18799db6e8f2)

Here is 2 unrelated case. Image Texture options is properties on Image data block. In another hand, Principled BSDF properties not is not a part of node itself, but part of panel so that is expected that N-panel ignore them.
Can you make sure if both bug is caused by the same commit, or this report can be splitted?

Here is 2 unrelated case. Image Texture options is properties on Image data block. In another hand, Principled BSDF properties not is not a part of node itself, but part of panel so that is expected that N-panel ignore them. Can you make sure if both bug is caused by the same commit, or this report can be splitted?
Contributor

Could I work on this issue.

Could I work on this issue.
Iliya Katushenock added
Module
Render & Cycles
and removed
Module
Nodes & Physics
labels 2024-01-05 15:05:28 +01:00

Principled BSDF node changes was done by Cycles module.
Image node wasn't changed recently, but also could be checked by Cycles module (or Image one) instead of nodes.

`Principled BSDF` node changes was done by Cycles module. Image node wasn't changed recently, but also could be checked by Cycles module (or Image one) instead of nodes.
Iliya Katushenock added the
Interest
Images & Movies
label 2024-01-05 15:07:32 +01:00
Brecht Van Lommel added
Module
Nodes & Physics
and removed
Module
Render & Cycles
labels 2024-01-08 18:43:32 +01:00

I think this is an issue with the node panels mechanism, not a Cycles problem. The contents of the panels should be draw in the sidebar.

CC @LukasTonne

I think this is an issue with the node panels mechanism, not a Cycles problem. The contents of the panels should be draw in the sidebar. CC @LukasTonne
Lukas Tönne self-assigned this 2024-01-09 09:24:37 +01:00
Member

13fac109 added button callbacks to the panel declarations, and removed many shader buttons from the older draw_buttons callback in bNodeType. But the sidebar panel only draws the buttons handled by bNodeType::draw_button.

The sockets themselves use the flattened node.inputs list which ignores the panels, so i guess we need a similar "draw everything and ignore panels" function for buttons.

13fac109 added button callbacks to the panel declarations, and removed many shader buttons from the older `draw_buttons` callback in `bNodeType`. But the sidebar panel only draws the buttons handled by `bNodeType::draw_button`. The sockets themselves use the flattened `node.inputs` list which ignores the panels, so i guess we need a similar "draw everything and ignore panels" function for buttons.
Member

I can add an option to the RNA draw callbacks to draw panel buttons in addition to the top-level buttons. Downside is that the order of buttons and sockets will not match the order in the node instance, it will draw all the buttons before any sockets.

I can add an option to the RNA draw callbacks to draw panel buttons in addition to the top-level buttons. Downside is that the order of buttons and sockets will not match the order in the node instance, it will draw all the buttons before any sockets.

Can we use the same mechanism as #116472 in the node editor sidebar, to support panels there?

Can we use the same mechanism as #116472 in the node editor sidebar, to support panels there?
Member

@JacquesLucke do the new panels have python support?

@JacquesLucke do the new panels have python support?
Member

@LukasTonne not yet, as mentioned in f824476bd5

Should be fairly straight forward to add though.

@LukasTonne not yet, as mentioned in https://projects.blender.org/blender/blender/commit/f824476bd5f81f98f9b969661e8e9ac4d50a5521 Should be fairly straight forward to add though.
Member

Any volunteers for implementing that?

Any volunteers for implementing that?
Member

I can make a patch today.

I can make a patch today.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-16 13:39:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115727
No description provided.